--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,9 +20,17 @@ android {
     }
 }
 
+repositories {
+    jcenter()
+    maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+}
+
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile files('libs/commons-io-2.5.jar')
+    compile 'com.android.support:appcompat-v7:22.2.1'
+    compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
+
 }
